recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:9: error: not enough arguments for method recule: (x$1: Double)Unit.
Unspecified value parameter x$1.
      recule()
            ^Tree:10: error: not enough arguments for method gauche: (x$1: Double)Unit.
Unspecified value parameter x$1.
      gauche()
            ^