recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  if(steps<1){
    return
  }else{
    avance(length)
    droite(angle)
    return(tree(steps-1,shrink*length,angle,shrink))
    if(steps<1){
      recule()
      gauche()
      return(tree(steps-1,shrink*length,angle,shrink))
    }
  }
}